# shop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  schema.graphql
.github/workflows/: rust.yml
config/: Cargo.toml
config/src/: api_client.rs  lib.rs  random.rs  recaptcha.rs  tgbot.rs
entity/: Cargo.toml
entity/src/: cart_item.rs  lib.rs  mail_sending.rs  mod.rs  order.rs  prelude.rs  recipient.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_cart_item.rs  m20220101_000001_create_table.rs  m20220903_141616_mail_sendings.rs  m20220903_144201_order.rs  m20220904_225301_add_title_col.rs  main.rs
src/: cache.rs  config.rs  grant.rs  main.rs  queries.rs
src/api/: gql.rs  mod.rs  product.rs  query.graphql  query.rs
src/entity/: cart_item.rs  id.rs  mod.rs  order.rs  product.rs  recipient.rs
src/graphql_schema/: mod.rs  mutations.rs  order_input.rs  orders.rs  product_input.rs  queries.rs  recipient_input.rs
src/services/: mod.rs  order.rs  recaptcha.rs  tg.rs
