[package]
edition = "2021"
name = "tyorka-shop"
version = "0.1.0"

[dependencies]
actix-web = "4.1.0"
actix-web-grants = "3.0.1"
async-graphql = { version = "4.0.6", features = ["uuid", "tokio"] }
async-graphql-actix-web = "4.0.6"
confy = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
