[package]
edition = "2021"
name = "tyorka-shop"
version = "0.1.0"

[dependencies]
actix-web = "4.1.0"
actix-web-grants = "3.0.1"
async-graphql = { version = "4.0.6", features = ["uuid", "tokio"] }
async-graphql-actix-web = "4.0.6"
async-trait = "0.1.57"
env_logger = "0.9.0"
graphql_client = "0.11.0"
indoc = "1.0.7"
log = "0.4.17"
config = { path = "./config" }
entity = { path = "./entity" }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.83"
tokio = "1.20.1"
sea-orm = { version = "^0", features = [ "runtime-tokio-native-tls", "sqlx-sqlite", "macros" ] }
lazy_static = "1.4.0"
time = "0.3.11"
cached = "0.39.0"

[workspace]
members = [".", "config", "migration", "entity"]
