[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }
url = "2.2.2"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm-migration = {version = "^0.9.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
